fix + doc : subscriber api limited + OpenAPI desription and tag added
